Activar animacion solo si se esta reproduciendo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,9 @@ html {
   width: 100dvw;
   height: 100dvh;
   object-fit: cover;
+}
+
+.radio.playing {
   animation: heartBeat 0.5s infinite;
 }
 
